Patch Row allows task changes to size and position, but need validation still